# pythonProject_seevision

./: .gitignore  README.md  __init__.py  requirements.txt
Flask/: flask_run.py
HW_Scripts/: Result.txt  pdfExcelAnalysis.py
Others/: SingleFilePathWrapper_ForPYQT5.py  audioTestScript.py  sync帧率&中途掉线  temp.py  wordsCatchCount.py
SPD0101/: captureStressTest.py
VS680_Scripts/: catch_log.bat  flash_aosp.bat  flash_aosp_img.sh  otherLogCatch.txt
customer_count_sdk_test_case/: customer_count_sdk_test_case.py
dolphingscript/: 20220304测试计划  stableTest.py
pandaOS_test_case/: basic_and_stable_function_test.py  calendar.py  calendar_test.py  getBatteryHealthd.py
pet_pupil_test_case/: click_drag_bar.py  result.csv  result_tap_seekbar.csv  stress_by_uiautomator.py  stress_test_case.py
ralayControl/: __init__.py  asd.py  serialControl.py  serialSwitch.py
sdk_test_case/: case1.sh  guide.txt  run_simulation.sh  sdk_test.py
shell_script/: install_apk.bat  outside.sh  requirements.txt  test.sh
shumeipai/StressTest_SnapshotSDK/snapshot_sdk/: CMakeLists.txt  main.cpp
shumeipai/StressTest_SnapshotSDK/snapshot_sdk/doc/: 66-sxusb.rules  README.txt
shumeipai/StressTest_SnapshotSDK/snapshot_sdk/include/: svcontroller_factory.h  svcontroller_interface.h  svsnapshoter_interface.h
update_script/: 100times_result.txt  ota.py  qfil_flashTool.py  script_toRun.py  update.txt
windows_control/: @AutomationLog.txt  Note.txt  compare_result_20210827_201429.xlsx  compare_result_20210830_093236.xlsx  compare_result_20210831_183227.xlsx  compare_result_20220110_211741.xlsx  (+16 more)
(+185 files in other folders)
